<resources>
    <string name="app_name">Quiz App</string>
    <string name="_1960">1960</string>
    <string name="_1957">1957</string>
    <string name="_1948">1948</string>
    <string name="_1952">1952</string>
    <string name="question2">2. Which of these are past Presidents of Ghana?</string>
    <string name="mensah">John Kwaku Mensah</string>
    <string name="kuffour">John Agykum Kuffour</string>
    <string name="mahama">John Dramani Mahama</string>
    <string name="kusi">John Aboagye Kusi</string>
    <string name="question3">3. What was Ghana formerly called?</string>
    <string name="question4">4. What is the currency in Ghana called?</string>
    <string name="question5">5. Which lake in Ghana is one of the largest man-made lakes in the world??</string>
    <string name="bosumtwi">Lake Bosumtwi</string>
    <string name="pra">Lake Pra</string>
    <string name="chad">Lake Chad</string>
    <string name="volta">Lake Volta</string>
    <string name="question1">1. When did Ghana gain independence?</string>
    <string name="Quiz_title">History of ghana</string>
    <string name="type_answer">Please type answers here</string>
    <string name="reset">reset</string>
    <string name="submit">submit</string>
    <string name="name">Please Enter Your Name Here.</string>
    <string name="gold_coast">Gold Coast</string>
    <string name="cedi">Cedi</string>
    <string name="reset_questions">Quiz Cleared</string>
    <string name="toast1">Hi</string>
    <string name="toast2">You scored</string>
    <string name="toast3">out of 5 answers correct</string>
</resources>
